<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="strAppName">Treadmill</string>
    <string name="strRunning">正在后台运行</string>
    <string name="strWait">请耐心等待</string>
    <string name="strWaitLoad">请等待加载</string>
    <string name="strPlzInsertU">请插入 U 盘！</string>

    <string name="strBtSpp">蓝牙串口</string>
    <string name="strBtSppDelay">串口延迟:</string>
    <string name="strModel">模式:</string>
    <string name="strReceiveModel">接收模式</string>
    <string name="strConversationModel">会话模式</string>
    <string name="strMillisecond">毫秒</string>
    <string name="strShowHex">Hex 显示</string>
    <string name="strSendHex">Hex 发送</string>
    <string name="strNewLine">发送新行</string>
    <string name="strSend">发送</string>
    <string name="strConnect">连接</string>
    <string name="strStop">断开</string>
    <string name="strClear">清空</string>
    <string name="strMe">我</string>
    <string name="strDiscoverable">可发现</string>
    <string name="strPairedDevices">配对设备</string>
    <string name="strOtherDevices">可连接设备</string>
    <string name="strScanDevices">扫描设备</string>
    <string name="strScanning">正在扫描设备</string>
    <string name="strSelectDevice">选择连接设备</string>
    <string name="strNonePaired">无配对设备</string>
    <string name="strNoneFound">找不到设备</string>
    <string name="strConnecting">正在连接</string>
    <string name="strConnected">连接:</string>
    <string name="strConnectedTo">连接到</string>
    <string name="strNotConnected">无连接</string>
    <string name="strDeviceLost">蓝牙设备连接中断。</string>
    <string name="strUnableConnect">无法连接到蓝牙设备。</string>
    <string name="strNotConnectedTo">没有连接蓝牙设备。</string>
    <string name="strBtNotAvailable">不支持蓝牙。</string>
    <string name="strBtNotEnabled">无法启用蓝牙。</string>
    <string name="strSignalStrengthGood">(信号强度: 好)</string>
    <string name="strSignalStrengthGeneral">(信号强度: 一般)</string>
    <string name="strSignalStrengthNotGood">(信号强度: 差)</string>

    <string name="browser_url_inputhint">请输入网址：</string>
    <string name="browser_url_address">网站地址</string>
    <string name="browser_url_ok">确定</string>
    <string name="browser_url_noBrowsingHistory">尚未浏览网页</string>
    <string name="browser_url_netUnconnect">设备尚未连接网络</string>
    <string name="browser_url_webLoading">正在加载网页，请稍后&#8230;</string>
    <string name="browser_url_goBackLast">已经后退到最后一页</string>
    <string name="browser_url_goForwardLast">已经前进到最后一页</string>
    <string name="browser_url_alreadyAddToFavourite">已经添加到收藏夹</string>
    <string name="browser_url_alreadyRemoveFromFavourite">已经从收藏夹移除</string>

    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>

    <string name="descr_image">Image</string>

    <string name="strUnitsTransfer">公英制转换</string>
    <string name="strWiFi">WiFi</string>
    <string name="strBluetooth">蓝牙</string>
    <string name="strBrightness">亮度</string>
    <string name="strVolume">音量</string>
    <string name="strSysVer">系统版本</string>
    <string name="strBackDef">恢复出厂设置</string>
    <string name="strMetric">公制</string>
    <string name="strImperial">英制</string>
    <string name="strOn">开</string>
    <string name="strOff">关</string>

    <string name="VideoLoading">Loading video&#8230;</string>

    <string name="strWiFiWLAN">WLAN</string>
    <string name="strWiFiScan">搜索</string>
    <string name="strWiFiScanning">正在搜索&#8230;</string>
    <string name="strWiFiSaved">保存</string>
    <string name="strWiFiCancel">取消</string>
    <string name="strWiFiConnect">连接</string>
    <string name="strWiFiConnected">已连接</string>
    <string name="strWiFiDisconnect">断开连接</string>
    <string name="strWiFiNotConnected">无法连接</string>
    <string name="strWiFiNotInRange">不在范围内</string>
    <string name="strWiFiPassword">密码</string>
    <string name="strWiFiShowPassword">显示密码</string>
    <string name="strWiFiForgetNetwork">取消网络</string>
    <string name="strWiFiConnectToNetwork">连接网络</string>


    <string name="history_hour">时</string>
    <string name="history_week">周</string>
    <string name="history_month">月</string>
    <string name="history_year">年</string>
    <string name="history_target">目标</string>
    <string name="history_compare">比较</string>
    <string name="history_this_time">本次</string>
    <string name="history_average_time">平均/次</string>
    <string name="history_last_time">上次</string>
    <string name="history_best_time">最佳次</string>
    <string name="history_this_week">本周</string>
    <string name="history_average_week">平均/周</string>
    <string name="history_last_week">上周</string>
    <string name="history_best_week">最佳周</string>
    <string name="history_this_month">本月</string>
    <string name="history_average_month">平均/月</string>
    <string name="history_last_month">上月</string>
    <string name="history_best_month">最佳月</string>
    <string name="history_this_year">本年</string>

    <string name="treadmill_netUnconnect">设备尚未连接网络</string>
    <string name="treadmill_guest">客人</string>
    <string name="treadmill_grandfather">爷爷</string>
    <string name="treadmill_grandmother">奶奶</string>
    <string name="treadmill_father">爸爸</string>
    <string name="treadmill_mother">妈妈</string>
    <string name="treadmill_oldbrother">哥哥</string>
    <string name="treadmill_sister">姐姐</string>
    <string name="treadmill_youngerbrother">弟弟</string>
    <string name="treadmill_youngersister">妹妹</string>
    <string name="treadmill_return">返回</string>
    <string name="treadmill_sign_in">注册</string>
    <string name="treadmill_sign_in_false">注册失败</string>
    <string name="treadmill_sign_in_success">注册成功</string>
    <string name="treadmill_sign_in_exist">此账号已经被注册</string>
    <string name="treadmill_login">登陆</string>
    <string name="treadmill_login_false">登陆失败</string>
    <string name="treadmill_login_success">登陆成功</string>
    <string name="treadmill_ok">确定</string>
    <string name="treadmill_account">用户名</string>
    <string name="treadmill_account_error">用户名错误</string>
    <string name="treadmill_input_account">请输入用户名</string>
    <string name="treadmill_pwd">密码</string>
    <string name="treadmill_pwd_error">密码错误</string>
    <string name="treadmill_pwd_confirm">确认密码</string>
    <string name="treadmill_input_pwd">请输入密码</string>
    <string name="treadmill_member_typename">成员类型</string>
    <string name="treadmill_input_member_typename">请输入成员类型</string>
    <string name="treadmill_updage">更新</string>
    <string name="treadmill_upload_success">上传成功</string>
    <string name="treadmill_upload_false">上传失败</string>
    <string name="treadmill_yes">是</string>
    <string name="treadmill_no">否</string>
    <string name="treadmill_whether_redownload">是否重新下载数据？</string>
    <string name="treadmill_download_success">下载历史数据成功</string>
    <string name="treadmill_download_false">下载历史数据失败</string>
    <string name="treadmill_download_rank_success">下载排行榜数据成功</string>
    <string name="treadmill_download_rank_false">下载排行榜数据失败</string>
    <string name="treadmill_age">年龄</string>
    <string name="treadmill_height">身高(米)</string>
    <string name="treadmill_weight">体重(公斤)</string>
    <string name="treadmill_goal">个人周目标(每周跑多少千米)</string>
    <string name="treadmill_uploadtime">上传时间</string>
    <string name="treadmill_exerciseduration">锻炼时长(分)</string>
    <string name="treadmill_runningdistance">跑步距离(米)</string>
    <string name="treadmill_runningsteps">跑步步数</string>
    <string name="treadmill_consumecalorie">消耗卡里路(卡)</string>
    <string name="treadmill_upload">上传</string>
    <string name="treadmill_record">记录</string>
    <string name="treadmill_currentpage">当前页</string>
    <string name="treadmill_totalpage">总页数</string>
    <string name="treadmill_record_success">查询记录成功</string>
    <string name="treadmill_record_false">查询记录失败</string>
    <string name="treadmill_statit">统计</string>
    <string name="treadmill_statit_success">统计成功</string>
    <string name="treadmill_statit_false">统计失败</string>
    <string name="treadmill_statitype">统计类型</string>
    <string name="treadmill_numbertype">计算方式</string>
    <string name="treadmill_timetype">时间期限</string>
    <string name="treadmill_queriesnum">查询数量</string>
    <string name="treadmill_numbertype_single">单次</string>
    <string name="treadmill_numbertype_many">累加</string>
    <string name="treadmill_timetype_week">本周</string>
    <string name="treadmill_timetype_month">本月</string>
    <string name="treadmill_timetype_year">本年</string>
    <string name="str_timer">0:00</string>
    <string name="str_firstmp3">01.mp3</string>
    <string name="str_wifissid">SSID</string>
    <string name="str_wifistatus">Status</string>
    <string name="str_null"></string>
</resources>