<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/layLogin"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/treadmill_sign_in"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/layLogin1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="2"
                    android:text="@string/treadmill_account"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/edtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layPassword1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtPassword1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="2"
                    android:text="@string/treadmill_pwd"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/edtPassword1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layPassword2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtPassword2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="2"
                    android:text="@string/treadmill_pwd_confirm"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/edtPassword2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_null" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/btn_login_sign_in"
                android:text="@string/treadmill_return"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/btn_login_ok"
                android:text="@string/treadmill_ok"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>