<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/layLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/layLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_login_return"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layLogin2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="2"
                    android:text="@string/treadmill_account"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/edtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="2"
                    android:text="@string/treadmill_pwd"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:text="@string/str_null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/laySignIn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/btn_login_ok"
                    android:text="@string/treadmill_sign_in"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layLogin3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnEntry"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_login_entry"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>